MVVM structure attached. Clustered. Deals Model added. Search screen ui editted.

--- a/app/src/main/res/drawable/ic_map_selected.xml
+++ b/app/src/main/res/drawable/ic_map_selected.xml
@@ -1,16 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="68dp"
-    android:height="48dp"
-    android:viewportWidth="68"
-    android:viewportHeight="48">
+    android:width="20dp"
+    android:height="20dp"
+    android:viewportWidth="20"
+    android:viewportHeight="20">
   <path
-      android:pathData="M24,0L44,0A24,24 0,0 1,68 24L68,24A24,24 0,0 1,44 48L24,48A24,24 0,0 1,0 24L0,24A24,24 0,0 1,24 0z"
-      android:fillColor="#FF4760"/>
-  <group>
-    <clip-path
-        android:pathData="M18,8h32v32h-32z"/>
-    <path
-        android:pathData="M20.667,14.667L30,10.667L38,14.667L46.404,11.065C46.505,11.022 46.616,11.004 46.726,11.014C46.836,11.024 46.942,11.061 47.034,11.122C47.126,11.182 47.202,11.265 47.254,11.362C47.306,11.46 47.333,11.568 47.333,11.679V33.333L38,37.333L30,33.333L21.596,36.935C21.494,36.978 21.384,36.996 21.274,36.986C21.164,36.976 21.058,36.939 20.966,36.878C20.874,36.818 20.798,36.735 20.746,36.638C20.694,36.54 20.667,36.432 20.667,36.321V14.667ZM38,34.352V17.568L37.913,17.605L30,13.648V30.432L30.087,30.395L38,34.352Z"
-        android:fillColor="#FCFCFD"/>
-  </group>
+      android:pathData="M0,3L7,0L13,3L19.303,0.299C19.379,0.266 19.462,0.253 19.545,0.261C19.627,0.268 19.706,0.296 19.775,0.341C19.844,0.387 19.901,0.449 19.94,0.522C19.98,0.595 20,0.676 20,0.759V17L13,20L7,17L0.697,19.701C0.621,19.734 0.538,19.747 0.455,19.74C0.373,19.732 0.294,19.704 0.225,19.659C0.155,19.613 0.099,19.551 0.06,19.478C0.02,19.405 -0,19.324 0,19.241V3ZM13,17.764V5.176L12.935,5.204L7,2.236V14.824L7.065,14.796L13,17.764Z"
+      android:fillColor="#181A25"/>
 </vector>
