--- a/app/src/main/res/drawable/ic_search_selected.xml
+++ b/app/src/main/res/drawable/ic_search_selected.xml
@@ -1,16 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="68dp"
-    android:height="48dp"
-    android:viewportWidth="68"
-    android:viewportHeight="48">
+    android:width="21dp"
+    android:height="21dp"
+    android:viewportWidth="21"
+    android:viewportHeight="21">
   <path
-      android:pathData="M24,0L44,0A24,24 0,0 1,68 24L68,24A24,24 0,0 1,44 48L24,48A24,24 0,0 1,0 24L0,24A24,24 0,0 1,24 0z"
-      android:fillColor="#FF4760"/>
-  <group>
-    <clip-path
-        android:pathData="M18,8h32v32h-32z"/>
-    <path
-        android:pathData="M42.041,30.156L47.752,35.865L45.865,37.752L40.156,32.041C38.032,33.744 35.389,34.671 32.667,34.667C26.043,34.667 20.667,29.291 20.667,22.667C20.667,16.043 26.043,10.667 32.667,10.667C39.291,10.667 44.667,16.043 44.667,22.667C44.671,25.389 43.744,28.032 42.041,30.156Z"
-        android:fillColor="#FCFCFD"/>
-  </group>
+      android:pathData="M16.031,14.617L20.314,18.899L18.899,20.314L14.617,16.031C13.024,17.308 11.042,18.003 9,18C4.032,18 0,13.968 0,9C0,4.032 4.032,0 9,0C13.968,0 18,4.032 18,9C18.003,11.042 17.308,13.024 16.031,14.617Z"
+      android:fillColor="#181A25"/>
 </vector>
