--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,27 +7,27 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.alptazecicek.travelapp.HomeFragment"
+        android:name="com.alptazecicek.travelapp.presentation.home.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.alptazecicek.travelapp.SearchFragment"
+        android:name="com.alptazecicek.travelapp.presentation.search.SearchFragment"
         android:label="fragment_search"
         tools:layout="@layout/fragment_search" />
     <fragment
         android:id="@+id/tripFragment"
-        android:name="com.alptazecicek.travelapp.TripFragment"
+        android:name="com.alptazecicek.travelapp.presentation.trip.TripFragment"
         android:label="fragment_trip"
         tools:layout="@layout/fragment_trip" />
     <fragment
         android:id="@+id/guideFragment"
-        android:name="com.alptazecicek.travelapp.GuideFragment"
+        android:name="com.alptazecicek.travelapp.presentation.guide.GuideFragment"
         android:label="fragment_guide"
         tools:layout="@layout/fragment_guide" />
     <fragment
         android:id="@+id/detailFragment"
-        android:name="com.alptazecicek.travelapp.DetailFragment"
+        android:name="com.alptazecicek.travelapp.presentation.detail.DetailFragment"
         android:label="fragment_detail"
         tools:layout="@layout/fragment_detail" />
 </navigation>
